# npo_kolibri_file_xor_tool

./: .env  .gitignore  CMakeLists.txt  README.md  justfile
.github/workflows/: build-and-test.yml
src/: file_cache.cpp  file_cache.h  file_processor.cpp  file_processor.h  file_result.h  file_utils.cpp  file_utils.h  main.cpp  mainwindow.cpp  mainwindow.h  worker.cpp  worker.h
src/operations/: binary_operations.cpp  binary_operations.h  ibinary_operation.h  operation_factory.cpp  operation_factory.h
src/tests/: test_file_cache.cpp  test_file_utils.cpp  test_gui_helpers.cpp  test_gui_helpers.h  test_helpers.cpp  test_helpers.h  test_main.cpp  test_mainwindow.cpp  test_operations.cpp  test_stress.cpp  test_worker.cpp
src/utils/: file_utils.cpp  file_utils.h  hex_parser.cpp  hex_parser.h
